--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -2,3 +2,10 @@
 hypermessagebroker:
   ip: "localhost"
   port: 25465
+lobbies:
+  "Lobby-1"
+wait-lobbies:
+  "waitlobby"
+queue:
+  activeCount: 300 # Quantidade necessário para que a fila inicie
+  maxCount: 2000 # Quantidade máxima do servidor, onde é necessário esperar outros jogadores sairem
