--- a/src/main/resources/roles.yml
+++ b/src/main/resources/roles.yml
@@ -1,11 +1,12 @@
 membro:
-  name: "Membro"
-  order: 2
-  tag: "§7"
-  partysize: 5
-  multiplier: 1
-  multicolor: false
-  permission: "role.member"
+  name: "Membro" # nome do cargo
+  order: 2 # quanto menor mais importante
+  tag: "§7" # tag
+  partysize: 5 # tamanho da party
+  multiplier: 1 # multiplicador
+  multicolor: false # poder de troca de cor
+  jumpqueue: false # poder de pular a fila
+  permission: "role.member" # permissão
 vip:
   name: "VIP"
   order: 1
@@ -13,6 +14,7 @@ vip:
   partysize: 8
   multiplier: 2
   multicolor: true
+  jumpqueue: false
   permission: "role.vip"
 vipplus:
   name: "VIP+"
@@ -21,4 +23,5 @@ vipplus:
   partysize: 8
   multiplier: 2
   multicolor: true
+  jumpqueue: false
   permission: "role.vipplus"
